# beyond_gaussian_denoiser_dncnn

./: Makefile  README.md  pyproject.toml
config/: train.yaml
config/experiment/: cdncnn-b.yaml  dncnn-3.yaml  raise1k.yaml  raise1k_low_noise.yaml
models/: cdnccn_b.pt  cdnccn_b_raise1k.pt  cdnccn_b_raise1k_low_noise.pt  dnccn_3.pt
notebooks/: 01-mw-inspect-data.ipynb  02-mw-test-transforms.ipynb  03-mw-inference.ipynb  04-mw-read-raise1k-ds.ipynb  05-mw-export-model.ipynb  06-mw-testing.ipynb  07-mw-test-standardized-set.ipynb
scripts/: download_bsds500.sh  download_cbsd68.sh  download_raise1k.py  download_raise1k.sh  download_set12.sh  slurm.sh
src/gaussian_denoiser/: data.py  dataset.py  dncnn.py  export.py  inference.py  test.py  train.py  transforms.py  utils.py
tests/: test_transforms_awgn.py  test_utils.py
